# intergrid

./: LICENSE.BSD  MANIFEST.in  README.md  changelog.txt  pyproject.toml  setup.cfg  setup.py
intergrid/: __init__.py  intergrid.py
intergrid/test/: test-intergrid.py  testfuncs.py  util.py
