# setup.cfg

[metadata]
name = intergrid
# no, setup.py version = 2020.02.20
description = Interpolate data given on an Nd box grid, uniform or non-uniform, using numpy and scipy
long_description = file: README.md
keywords = interpolation box-grid  rectangular-grid  python  numpy  scipy
author = Denis
author_email = denis-bz-py@t-online.de
license = BSD 3-Clause License
url = https://github.com/denis-bz/intergrid.git
# classifiers =

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
	scipy

